--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "vue-router": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
