--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "axios": "^0.17.1",
+    "log4js": "^2.5.3",
+    "redis": "^2.8.0"
   }
 }
